fix style for when map names are too long

--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,10 @@
   max-width: 45px;
 }
 
+#tilesetDataSel,
+#mapsDataSel {
+  max-width: 60px;
+}
 .tileset_opt_field.header{
   padding: 3px;
 }
